Displacement of group instance objects when switching to textured viewport shading #39942

Closed
opened 2014-04-29 02:31:54 +02:00 by Willi · 9 comments

System Information
Win7/64

Blender Version
Worked: 2.69
Broken: since 2.70 (including latest build 4a1b877)

Short description of error
The location of group instance objects is computed incorrectly when switching to textured shading mode.

Exact steps for others to reproduce the error
Open GroupInstanceDisplacement.blend . Solid shading is active. You see..:
Bild_315.JPG

Problem: After switching to textured viewport shading mode, the group instance objects get displaced:
Bild_316.JPG

Description: The visible Scene1 contains a group instance, and the group instance which is consisting of two objects - a mesh and an empty - is defined in Scene2. The mesh is modified by an array modifier with a rotated empty as the target object.

The problem doesn't seem to exist if the group is defined within the same scene as the group instance is located in.

(I am not 100% sure I did not report this already, but I couldn't find it. Sorry if so.)

**System Information** Win7/64 **Blender Version** Worked: 2.69 Broken: since 2.70 (including latest build 4a1b877) **Short description of error** The location of group instance objects is computed incorrectly when switching to textured shading mode. **Exact steps for others to reproduce the error** Open [GroupInstanceDisplacement.blend](https://archive.blender.org/developer/F86323/GroupInstanceDisplacement.blend) . Solid shading is active. You see..: ![Bild_315.JPG](https://archive.blender.org/developer/F86319/Bild_315.JPG) Problem: After switching to textured viewport shading mode, the group instance objects get displaced: ![Bild_316.JPG](https://archive.blender.org/developer/F86321/Bild_316.JPG) Description: The visible Scene1 contains a group instance, and the group instance which is consisting of two objects - a mesh and an empty - is defined in Scene2. The mesh is modified by an array modifier with a rotated empty as the target object. The problem doesn't seem to exist if the group is defined within the same scene as the group instance is located in. (I am not 100% sure I did not report this already, but I couldn't find it. Sorry if so.)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @willi-2

Added subscriber: @willi-2
Author

Addition: As I suspected...: #39113. Don't know if it's the same or only a similar problem. However, it was about emitted particles, so....

Addition: As I suspected...: #39113. Don't know if it's the same or only a similar problem. However, it was about emitted particles, so....
Member

Added subscriber: @LukasTonne

Added subscriber: @LukasTonne
Member

#39113 at least already showed the same bug in 2.69, while this seems to be a new problem in 2.70. So don't think it's the exact same issue.

#39113 at least already showed the same bug in 2.69, while this seems to be a new problem in 2.70. So don't think it's the exact same issue.
Sergey Sharybin self-assigned this 2014-04-29 11:55:48 +02:00

This issue was referenced by blender/blender-addons-contrib@7544961ea5

This issue was referenced by blender/blender-addons-contrib@7544961ea5177b61b8f1f07e156cac28afe29764

This issue was referenced by 7544961ea5

This issue was referenced by 7544961ea5177b61b8f1f07e156cac28afe29764

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 7544961ea5.

Closed by commit 7544961ea5.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39942
No description provided.