Fix T39942: Displacement of group instance objects when switching to textured viewport shading

Usual dupli object issue, sometimes it's needed that all the object in
dupli group have modified obmat.

Made it an utility function now, which is used by convertblender and
dupli draw code now.