source/blender/blenkernel/intern/object_dupli.c
@@ -1245,3 +1245,42 @@ int count_duplilist(Object *ob)
 	}
 	return 1;
 }
+
+DupliApplyData *duplilist_apply_matrix(ListBase *duplilist)
+{
+	DupliApplyData *apply_data = NULL;
+	int num_objects = BLI_countlist(duplilist);
+	if (num_objects > 0) {
+		DupliObject *dob;
+		int i;
+		apply_data = MEM_mallocN(sizeof(DupliApplyData), "DupliObject apply data");
+		apply_data->num_objects = num_objects;
+		apply_data->extra = MEM_mallocN(sizeof(DupliExtraData) * (size_t) num_objects,
+		                                "DupliObject apply extra data");
+
+		for (dob = duplilist->first, i = 0; dob; dob = dob->next, ++i) {
+			copy_m4_m4(apply_data->extra[i].obmat, dob->ob->obmat);
+			copy_m4_m4(dob->ob->obmat, dob->mat);
+		}
+	}
+	return apply_data;
+}
+
+void duplilist_restore_matrix(ListBase *duplilist, DupliApplyData *apply_data)
+{
+	DupliObject *dob;
+	int i;
+	/* Restore object matrices.
+	 * NOTE: this has to happen in reverse order, since nested
+	 * dupli objects can repeatedly override the obmat.
+	 */
+	for (dob = duplilist->last, i = apply_data->num_objects - 1; dob; dob = dob->prev, --i) {
+		copy_m4_m4(dob->ob->obmat, apply_data->extra[i].obmat);
+	}
+}
+
+void duplilist_free_apply_data(DupliApplyData *apply_data)
+{
+	MEM_freeN(apply_data->extra);
+	MEM_freeN(apply_data);
+}
